Gestione font + Creazione componente ToursCarousel

--- a/romeyouup.csproj
+++ b/romeyouup.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\assets\fonts\Metropolis\" />
     <Folder Include="Logs\" />
   </ItemGroup>
 
