--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,16 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=romeyouup;Uid=root;Pwd=clugia;",
+        "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=romeyouup;Uid=root;Pwd=clugia;"
         //"DefaultConnection": "Server=db5002002726.hosting-data.io;Port=3306;Database=dbs1633975;Uid=dbu30930;Pwd=Galaedali1!;"
+    },
+    "Smtp": {
+        "Host": "smtp.ionos.it",
+        "Port": 587,
+        "Username": "noreply@romeyouup.it",
+        "Userlabel": "romeyouup",
+        "Password": "Galaedali1!",
+        "InfoRequestsRecipients": "gian.boscolo@hotmail.it|noreply@romeyouup.it",
+        "InfoEmailSubject": "Nuova richiesta di informazioni su romeyouup"
     }
 }
