Gestito form contatto

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,7 +16,7 @@
         "Port": 587,
         "Username": "noreply@romeyouup.it",
         "Userlabel": "romeyouup",
-        "Password": "Galaedali1!",
+        "Password": "X1Mh4yKXNCDDVP5IOGC1iZgH8+5My8ckmS0XmrouV/4=",
         "InfoRequestsRecipients": "gian.boscolo@hotmail.it|noreply@romeyouup.it",
         "InfoEmailSubject": "Nuova richiesta di informazioni su romeyouup"
     }
