--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,8 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=romeyouup;Uid=root;Pwd=clugia;"
+        "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=romeyouup;Uid=root;Pwd=clugia;",
+        "DefaultMembershipConnection": "Server=127.0.0.1;Port=3306;Database=romeyouupmembership;Uid=root;Pwd=clugia;CharSet=utf8"
         //"DefaultConnection": "Server=db5002002726.hosting-data.io;Port=3306;Database=dbs1633975;Uid=dbu30930;Pwd=Galaedali1!;"
     },
     "Smtp": {
