--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "AppSettings": {
+        "Secret": "likeavirgintouchedfortheveryfirsttime"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -20,5 +23,12 @@
         "Password": "X1Mh4yKXNCDDVP5IOGC1iZgH8+5My8ckmS0XmrouV/4=",
         "InfoRequestsRecipients": "gian.boscolo@hotmail.it|noreply@romeyouup.it",
         "InfoEmailSubject": "Nuova richiesta di informazioni su romeyouup"
+    },
+    "IdentityServer": {
+        "Clients": {
+            "romeyouup": {
+                "Profile": "IdentityServerSPA"
+            }
+        }
     }
 }
