--- a/romeyouup.csproj
+++ b/romeyouup.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -39,6 +39,7 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\assets\fonts\Metropolis\" />
+    <Folder Include="Data\" />
     <Folder Include="Logs\" />
   </ItemGroup>
 
